# domain-services

./: CODEOWNERS  Makefile  README.md  domain-services-repository-scaffolding.md  pyproject.toml
docs/: evaluation_strategy.md
examples/: inference_intent_example.yaml
tests/: test_package_layout.py
